Made another bunch of model changes.
Added serviceId property to Booking and Option classes.
Changed Leg timestamp types from Instant to ZonedDateTime.
Removed now obsolete InstantEpochSerializer and InstantEpochDeserializer.
Removed obsolete Token class.